[project]
name = "palaiseau"
version = "0.1.0"
description = ""
authors = [
    {name = "CptRiggs",email = "clerickx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "palaiseau", from = "src"}]

[tool.poetry.scripts]
pls = 'bin.pls:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
